# ui-test-generator

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  api-docs.yaml  docker-models.py  langgraph.json  pyproject.toml  test-gigachat.py
api/: tasktracker-stub.http
runs/test-run/: created_tests.json  errors.txt  failure_reason.txt  plan.md
scripts/: dev.ps1  dev.sh
skills/tasktracker/: SKILL.md
skills/tasktracker-ui-test-generation/: SKILL.md  stand.md
src/: __init__.py  config.py  main.py  run_artifacts.py
src/agent/: __init__.py  graph.py  prompts.py  tools.py
src/mcp/: __init__.py  tasktracker_client_tools.py  tasktracker_server.py
src/tasktracker/: __init__.py  client.py  dry_run_client.py  get_test_case_json_example.json  patch_json_example.json  steps.py  stub.py  test_case_json_example.json  tools.py
stub_servers/: README.md  __init__.py
stub_servers/tasktracker/: __init__.py  app.py  seed_sample_data.py
stub_servers/tasktracker/sample_requests/: 01_create_folders.http  02_test_cases_postgres.http  03_test_cases_prometheus.http  04_test_cases_abyss.http  README.md
tests/: conftest.py  test_tasktracker_stub.py
wheels/: langchain_gigachat_lc1-0.4.0b6-py3-none-any.whl  langchain_gigachat_lc1-0.4.0b7-py3-none-any.whl
